tests/sylt_std/faulty_sets.sy
use set

start :: fn do
    set.add' set.new(), set.new()
end

// error: < is not defined for 'Set' and 'Set'
